--- a/Base.html
+++ b/Base.html
@@ -14,7 +14,13 @@
     
     <p> Welcome to Change Request System</p>
     <p>Select a option</p>
-</body>
+    <div class="buttons ">
+        <button> New Request Form</button>
+        <button > View Reports</button>
+        <button > Help</button>
+   
+    </div>
+    </body>
 
 
 </html>
