--- a/Base.html
+++ b/Base.html
@@ -15,10 +15,17 @@
     <p> Welcome to Change Request System</p>
     <p>Select a option</p>
     <div class="buttons ">
-        <button> New Request Form</button>
-        <button > View Reports</button>
-        <button > Help</button>
+        <a href="NewForm.html">
+            <button> New Request Form</button>
+        </a>
+        <a href="ViewReportuser.html"> <button > View Reports</button>
+        </a>
+        <a href="Helppage.html">
+
+            <button > Help</button>
    
+        </a>
+        
     </div>
     </body>
 
