--- a/Base.html
+++ b/Base.html
@@ -12,8 +12,8 @@
         <h1> Change Request System</h1>
     </header>
     
-    <p> Welcome to Change Request System</p>
-    <p>Select a option</p>
+    <p class="main"> Welcome to Change Request System</p>
+    <p class="main">Select a option</p>
     <div class="buttons ">
         <a href="NewForm.html">
             <button> New Request Form</button>
