--- a/Helppage.html
+++ b/Helppage.html
@@ -11,15 +11,44 @@
             <h1> Change Request System</h1>
 
         </header>
-        <div style="width: 500px;height: 1000px; background-color: biege;">
-            
 
+
+        <div  class="backdrop" >
+
+    <p class="faq">       
+    <b>How do I submit a change request?</b>
+    Click on the “New Request Form” button, fill in the details and click “Submit”. Your request will be sent for review.
+</p> 
+<p class="faq"> 
+   <b>How can I track the status of my request?</b> 
+    Go to “View Requests” to see the status of your request, such as Submitted, In Review, or Approved.
+</p>
+<p class="faq">
+    <b>Can I edit my request after submitting it?</b>
+    No, you need to contact an admin to make any changes.
+</p>
+<p class="faq">
+   <b> Can I see all requests, including those not submitted by me?</b>
+    No, only admins and approvers can see all requests.
+</p>
+<p class="faq"> 
+    <b>Who can change the status of a request?</b>
+    Only admins and approvers can change the status of a request.
+</p>
+<p class="faq">
+    <b>What should I do if I’m having trouble with the system?</b>
+    Visit the “help” page or contact support at support@changerequestsystem.com
+   </p>
+
+
+
+           
 
 
         </div>
 
 
-
+       </body>
 
 
 
