--- a/NewForm.html
+++ b/NewForm.html
@@ -11,7 +11,107 @@
             <h1> Change Request System</h1>
             
         </header>
+<form>
+<div>
+<label for="Project-name"> Project name</label><br>
+<input type="text" name="Project Name">
+</div>
 
+<div>
+    <label for="Change-name"> Change name</label><br>
+    <input type="text" name="Change Name">
+    </div>
+
+    <div>
+        <label for="Date"> Date</label><br>
+        <input type="text" name="Date">
+        </div>
+
+        <div>
+            <label for="Change-no"> Change No.</label><br>
+            <input type="text" name="Change No.">
+            </div>
+
+            <div>
+                <label for="Locationof"> Location</label><br>
+                <input type="text" name="Location">
+                </div>
+
+                <div>
+                    <label for="first-name"> First name</label><br>
+                    <input type="text" name="First Name">
+                    </div>
+
+                    <div>
+                        <label for="Last-name"> Last name</label><br>
+                        <input type="text" name="Last name">
+                        </div>
+
+                        <div>
+                            <label for="Emailaddress"> Email</label><br>
+                            <input type="text" name="Email">
+                            </div>
+
+                            <div>
+                                <label for="Phone-Number"> Phone Number</label><br>
+                                <input type="text" name="Phone Number">
+                                </div>
+
+                                <div>
+                                    <label for="Job-Title"> Job Title</label><br>
+                                    <input type="text" name="Job Title">
+                                    </div>
+
+
+                                    <div>
+                                        <label for="Request-Category"> Request Category</label><br>
+                                        <input type="text" name="Request Category">
+                                        </div>
+                                        <div>
+<input type="checkbox" id="lowPrio" name="lowPrio" value="Low">
+  <label for="lowPrio"> Low</label><br>
+
+  <input type="checkbox" id="mediumPrio" name="mediumPrio" value="Medium">
+  <label for="mediumPrio"> Medium</label><br>
+
+  <input type="checkbox" id="HighPrio" name="HighPrio" value="High">
+  <label for="HighPrio"> High </label><br>
+
+  <input type="checkbox" id="CriticalPrio" name="CriticalPrio" value="Critical">
+  <label for="CriticalPrio"> Critical</label><br>
+
+ 
+</div>
+                                            <div>
+                                                <label for="Change-Description"> Change Description</label><br>
+                                                <input type="text" name="Change Description">
+                                                </div>
+
+                                                <div>
+                                                    <label for="Reason-Change"> Reason for Change</label><br>
+                                                    <input type="text" name="Reason for Change">
+                                                    </div>
+                                                    <div>
+                                                        <label for="Impact-Change"> Impact</label><br>
+                                                        <input type="text" name="Impact">
+                                                        </div>
+                                                        <div>
+                                                            <label for="Risks-Change"> Risks</label><br>
+                                                            <input type="text" name="Risks">
+                                                            </div>
+
+                                                            <div>
+                                                                <label for="Work-Tools-Required"> Work Tools Required</label><br>
+                                                                <input type="text" name="Work Tools Required">
+                                                                </div>
+                                                                <div> <label for="myfile">Select a file:</label>
+                                                                <input type="file" id="myfile" name="myfile" />
+                                                            </div>
+                                                                
+
+
+
+</form>
 
 
 
