--- a/NewForm.html
+++ b/NewForm.html
@@ -76,12 +76,11 @@
 </div>
 
 
-<div>
-<label for="Request-Category"> Request Category</label><br>
-<input type="text" name="Request Category"><br>
-</div>
+
 
 <div>
+<label> Priority</label> <br>
+
 <input type="radio" id="lowPrio" name="Priority" value="Low">
   <label for="lowPrio"> Low</label>
 
@@ -92,7 +91,7 @@
   <label for="HighPrio"> High </label>
 
   <input type="radio" id="CriticalPrio" name="Priority" value="Critical">
-  <label for="CriticalPrio"> Critical</label><br><br>
+  <label for="CriticalPrio"> Critical</label><br>
 
  
 </div>
@@ -118,9 +117,7 @@
 <label for="Work-Tools-Required"> Work Tools Required</label><br>
 <input type="text" name="Work Tools Required"><br>
 </div>
-<div> <label for="myfile">Select a file:</label>
-<input type="file" id="myfile" name="myfile" /> <br><br>
-</div>
+
 <div><input type="submit" value="Submit"></div>
                                                             
                                                                 
